Boton cerrar sesion fallo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="app_name">OgandoBritoOsirisJuniorProyectoPMDM</string>
     <string name="hint_introducir_usuario">usuario</string>
+    <string name="cerrar_sesion">Cerrar Sesion</string>
 
     <!-- Hint -->
 
